--- a/.env
+++ b/.env
@@ -8,3 +8,5 @@ PASSWORD=DannyPro123
 ADMIN_EMAIL=benshidanny11@gmail.com
 ADMIN_PASSWORD=DannyPro@321
 JWT_SECRET=DOTPHARMA_SECRET
+EMAIL_SENDER=dotpharma212@gmail.com
+PASSWORD_EMAIL_SENDER=0784871958
