--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "lodash": "^4.17.21",
     "moment": "^2.29.1",
     "morgan": "^1.10.0",
+    "nodemailer": "^6.7.2",
     "pg": "^8.7.3",
     "uuid": "^8.3.2"
   },
