--- a/.env
+++ b/.env
@@ -10,3 +10,4 @@ ADMIN_PASSWORD=DannyPro@321
 JWT_SECRET=DOTPHARMA_SECRET
 EMAIL_SENDER=dotpharma212@gmail.com
 PASSWORD_EMAIL_SENDER=0784871958
+DOPHARMA_EMAIL=dotpharmarw@gmail.com
