--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "test": "echo \"Error: no test specified\" && exit 1",
     "dev": "nodemon --exec babel-node src/app.js",
     "db:migrate": "babel-node src/database/migration/createTables.js",
-    "db:migrate:reset":"babel-node src/database/migration/dropTables.js",
+    "db:migrate:reset": "babel-node src/database/migration/dropTables.js",
     "build": "babel src --out-dir dist",
     "start": "npm run build && node dist/App.js",
     "db:admin": "babel-node src/database/model/userModel.js"
@@ -27,6 +27,7 @@
     "body-parser": "^1.19.2",
     "cors": "^2.8.5",
     "dotenv": "^16.0.0",
+    "eslint": "^8.12.0",
     "express": "^4.17.3",
     "jsonwebtoken": "^8.5.1",
     "lodash": "^4.17.21",
