--- a/package.json
+++ b/package.json
@@ -27,7 +27,6 @@
     "body-parser": "^1.19.2",
     "cors": "^2.8.5",
     "dotenv": "^16.0.0",
-    "eslint": "^8.12.0",
     "express": "^4.17.3",
     "jsonwebtoken": "^8.5.1",
     "lodash": "^4.17.21",
@@ -38,6 +37,8 @@
     "uuid": "^8.3.2"
   },
   "devDependencies": {
+    "eslint": "^8.12.0",
+    "eslint-config-google": "^0.14.0",
     "nodemon": "^2.0.15"
   }
 }
